Problem with bad padding solved